# leetcode

./: LICENSE  README.md  pyproject.toml
easy/: max_profit.py
other/: find_longest_diff_sub_string.py
tests/easy/: test_max_profit.py
tests/other/: test_longest_diff_sub_string.py
