[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["c3io <c3io@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
loguru = "^0.5.3"
arrow = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.5b1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
